# ax-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/ax/: packet_iterator.hpp  statistics.hpp
include/ax/statistics/: mean.hpp  stdev.hpp  variance.hpp
test/: CMakeLists.txt  test_packet_iterator.cpp  test_statistics.cpp
